Add new methods to API docs
