# docs/swagger.yaml
@@ -29,10 +29,9 @@ definitions:
       picture:
         type: string
     type: object
-host: localhost:5000
 info:
   contact:
-    email: truewebartisans@gmail.com
+    email: your@mail.com
     name: API Support
   description: This is a sample swagger for Fiber
   license:
@@ -42,11 +41,72 @@ info:
   title: Fiber Example API
   version: "1.0"
 paths:
+  /api/private/user:
+    delete:
+      consumes:
+      - application/json
+      description: Delete user by given ID.
+      parameters:
+      - description: User ID
+        in: body
+        name: id
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      tags:
+      - Private
+    patch:
+      consumes:
+      - application/json
+      description: Update user.
+      parameters:
+      - description: User ID
+        in: body
+        name: id
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+      tags:
+      - Private
+    post:
+      consumes:
+      - application/json
+      description: Create a new user.
+      parameters:
+      - description: E-mail
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+      tags:
+      - Private
   /api/public/user/{id}:
     get:
       consumes:
       - application/json
-      description: Gets one user by given ID.
+      description: Get user by given ID.
       parameters:
       - description: User ID
         in: path
@@ -66,14 +126,21 @@ paths:
     get:
       consumes:
       - application/json
-      description: Gets all exists users.
+      description: Get all exists users.
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
       tags:
       - Public
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
